- Fix change in 'config file' argument shortcut - Add kotlin-eap maven repo

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ allprojects {
             // for kotlinx.cli
             url "https://dl.bintray.com/kotlin/kotlin-dev/"
         }
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
 
     }
 
